--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "node-phash2",
+  "name": "phash2",
   "version": "1.0.0",
   "description": "node wrapper for pHash",
   "main": "index.js",
   "author": "Tim Stableford",
   "license": "MIT",
   "gypfile": true,
+  "types": "types/index.d.ts",
   "scripts": {
     "build": "node-gyp rebuild",
     "clean": "node-gyp clean",
