--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "phash2",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "node wrapper for pHash",
   "main": "index.js",
   "author": "Tim Stableford",
   "license": "MIT",
   "gypfile": true,
   "repository": "https://github.com/timstableford/node-phash2",
+  "keywords": [ "phash", "perceptual", "hash", "bindings", "n-api", "native" ],
   "types": "types/index.d.ts",
   "scripts": {
     "build": "node-gyp rebuild",
